--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Seguns – Portfolio</title>
+  <title>Segun Falade's Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -33,8 +33,8 @@
 </head>
 <body>
 
-  <h1>Hi, I’m Segun 👋</h1>
-  <p>I create interactive content and copy that connects. Explore some of my work below:</p>
+  <h1>Copy Interactive HQ</h1>
+  <p>Where converting copy and interactive content live. Explore some of my work below:</p>
 
   <a href="downloads/lead-magnet.pdf" class="link-button" target="_blank">📄 Download My Lead Magnet</a><br>
   <a href="stories/twine-story.html" class="link-button" target="_blank">🎮 Play My Twine Story</a><br>
