--- a/index.html
+++ b/index.html
@@ -3,42 +3,81 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Segun Falade's Portfolio</title>
+  <title>Copy Interactive HQ</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
       padding: 2rem;
-      max-width: 600px;
-      margin: auto;
-      background: #f9f9f9;
+      background: #f4f8fc;
       color: #222;
+      max-width: 700px;
+      margin: auto;
     }
+
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    img.logo {
+      width: 100px;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+    }
+
     h1 {
-      font-size: 2rem;
-      color: #111;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      color: #005f99;
     }
+
+    p.subheading {
+      font-size: 1.1rem;
+      color: #444;
+    }
+
     .link-button {
       display: inline-block;
       padding: 0.75rem 1.5rem;
-      margin: 0.5rem 0;
+      margin: 0.5rem 0.25rem;
       background: #007acc;
       color: white;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 8px;
+      font-weight: bold;
     }
+
     .link-button:hover {
       background: #005f99;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #999;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
 
-  <h1>Copy Interactive HQ</h1>
-  <p>Where converting copy and interactive content live. Explore some of my work below:</p>
+  <header>
+    <!-- Optional logo or image -->
+    <!-- <img src="logo.png" alt="Logo" class="logo"> -->
+    <h1>Copy Interactive HQ</h1>
+    <p class="subheading">Crafting copy that clicks — and content that <em>connects</em>.</p>
+  </header>
 
-  <a href="downloads/lead-magnet.pdf" class="link-button" target="_blank">📄 Download My Lead Magnet</a><br>
-  <a href="stories/twine-story.html" class="link-button" target="_blank">🎮 Play My Twine Story</a><br>
-  <a href="mailto:youremail@example.com" class="link-button">📬 Work With Me</a>
+  <div style="text-align: center;">
+    <a href="downloads/lead-magnet.pdf" class="link-button" target="_blank">📄 Download My Lead Magnet</a>
+    <a href="stories/twine-story.html" class="link-button" target="_blank">🎮 Play My Twine Story</a>
+    <a href="mailto:youremail@example.com" class="link-button">📬 Work With Me</a>
+  </div>
+
+  <footer>
+    © 2025 James – Copy Interactive HQ
+  </footer>
 
 </body>
 </html>
