--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <header>
     <!-- Optional logo or image -->
     <!-- <img src="logo.png" alt="Logo" class="logo"> -->
-    <h1>Copy Interactive HQ</h1>
+    <h1>Interactive Copy HQ</h1>
     <p class="subheading">Crafting copy that clicks — and content that <em>connects</em>.</p>
   </header>
 
