--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <header>
     <!-- Optional logo or image -->
-    <!-- <img src="logo.png" alt="Logo" class="logo"> -->
+    <!-- <img src="https://copyinteractive.github.io/coaching/assets/copyhqlogo.png" alt="Logo" class="logo"> -->
     <h1>Interactive Copy HQ</h1>
     <p class="subheading">Crafting copy that clicks — and content that <em>connects</em>.</p>
   </header>
