--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     }
 
     img.logo {
-      width: 100px;
-      border-radius: 50%;
+      width: 120px;
       margin-bottom: 1rem;
     }
 
@@ -63,9 +62,9 @@
 <body>
 
   <header>
-    <!-- Optional logo or image -->
-    <!-- <img src="https://copyinteractive.github.io/coaching/assets/copyhqlogo.png" alt="Logo" class="logo"> -->
-    <h1>Interactive Copy HQ</h1>
+    <!-- ✅ Inserted your logo here -->
+    <img src="https://copyinteractive.github.io/coaching/assets/copyhqlogo.png" alt="Copy Interactive HQ Logo" class="logo">
+    <h1>Copy Interactive HQ</h1>
     <p class="subheading">Crafting copy that clicks — and content that <em>connects</em>.</p>
   </header>
 
