--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@
 </head>
 <body>
 
-  <header>
-    <!-- ✅ Inserted your logo here -->
-    <img src="https://copyinteractive.github.io/coaching/assets/copyhqlogo.png" alt="Copy Interactive HQ Logo" class="logo">
-    <h1>Copy Interactive HQ</h1>
-    <p class="subheading">Crafting copy that clicks — and content that <em>connects</em>.</p>
-  </header>
+  <header style="display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap;">
+  <img src="https://copyinteractive.github.io/coaching/assets/copyhqlogo.png" alt="iCopy Logo" class="logo" style="width: 60px; height: 60px; border-radius: 50%;">
+  <h1 style="font-size: 2rem; margin: 0; color: #005f99;">Copy Interactive HQ</h1>
+</header>
 
   <div style="text-align: center;">
     <a href="downloads/lead-magnet.pdf" class="link-button" target="_blank">📄 Download My Lead Magnet</a>
