--- a/index.html
+++ b/index.html
@@ -9,62 +9,75 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 2rem;
-      background: #f4f8fc;
-      color: #222;
+      background: #F4F9FF; /* soft background */
+      color: #333333;
       max-width: 700px;
       margin: auto;
     }
 
     header {
-      text-align: center;
-      margin-bottom: 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      flex-wrap: wrap;
+      margin-bottom: 1.5rem;
     }
 
     img.logo {
-      width: 120px;
-      margin-bottom: 1rem;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-      color: #005f99;
+      font-size: 2rem;
+      margin: 0;
+      color: #3366CC; /* main brand blue */
     }
 
     p.subheading {
+      text-align: center;
       font-size: 1.1rem;
       color: #444;
+      margin-bottom: 2rem;
     }
 
     .link-button {
       display: inline-block;
       padding: 0.75rem 1.5rem;
       margin: 0.5rem 0.25rem;
-      background: #007acc;
+      background: #3366CC; /* brand blue */
       color: white;
       text-decoration: none;
       border-radius: 8px;
       font-weight: bold;
+      transition: background 0.3s ease;
     }
 
     .link-button:hover {
-      background: #005f99;
+      background: #254A99; /* darker hover */
     }
 
     footer {
       text-align: center;
       font-size: 0.9rem;
-      color: #999;
+      color: #666;
       margin-top: 2rem;
+      padding: 1rem;
+      background: #EAF3FF; /* light blue footer */
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
 
-  <header style="display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap;">
-  <img src="https://copyinteractive.github.io/coaching/assets/icopy.png" alt="iCopy Logo" class="logo" style="width: 60px; height: 60px; border-radius: 50%;">
-  <h1 style="font-size: 2rem; margin: 0; color: #005f99;">Copy Interactive HQ</h1>
-</header>
+  <header>
+    <img src="https://copyinteractive.github.io/coaching/assets/icopy.png" alt="iCopy Logo" class="logo">
+    <h1>Copy Interactive HQ</h1>
+  </header>
+
+  <p class="subheading">Crafting copy that clicks — and content that <em>connects</em>.</p>
 
   <div style="text-align: center;">
     <a href="downloads/lead-magnet.pdf" class="link-button" target="_blank">📄 Download My Lead Magnet</a>
