--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <header>
     <img src="https://copyinteractive.github.io/coaching/assets/icopy.png" alt="iCopy Logo" class="logo">
-    <h1>Copy Interactive HQ</h1>
+    <h1>Interactive Copy HQ</h1>
   </header>
 
   <p class="subheading">Crafting copy that clicks — and content that <em>connects</em>.</p>
