--- a/so-much-action.html
+++ b/so-much-action.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html data-init="no-js">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DB0GT84EC7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DB0GT84EC7');
+</script>
 <meta charset="UTF-8" />
 <title>so-much-action</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
