--- a/hello-there.html
+++ b/hello-there.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html data-init="no-js">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4H3LZCSC7V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4H3LZCSC7V');
+</script>
 <meta charset="UTF-8" />
 <title>hello-there</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
